# agent-infra

./: .gitignore  Makefile  README.md  agent-infra-startup.sh  claude.md  pipeline_comprehensive.py  pipeline_iterative.py  pipeline_managed.py
ComplementaryDocsToAgentDocs/: DOCS_STRATEGY.md  EXECUTION_PLAN.md  PROJECT_STATE.md  README.md
agent_docs/: claude.md  grammar.md  template-audit-bug.md  template-commit.md  template-conversation.md  template-explanation.md  writing-style.md
agent_tools/: pyproject.toml
agent_tools/agent_tools/: configure_hooks.py  configure_mcp.py  mcp_server.py
agents/: agent-architecture.md  agent-implementation.md  agent-manager.md  agent-review.md  agent-specification.md  agent-standalone-quality-audit.md  iterative.md  shared.md
skills/callgraph/: SKILL.md
skills/defuse/: SKILL.md
skills/explain-it-to-me/: SKILL.md
skills/revdeps/: SKILL.md
skills/standalone-audit/: SKILL.md
skills/tree/: SKILL.md
workflows/: Dockerfile  README.md  claude_runner.py  docker-claude.sh  pipeline_comprehensive.py  run_expansion.sh  validate.py
workflows/agents/: agent-architecture.md  agent-implementation.md  agent-manager.md  agent-review.md  agent-specification.md  iterative.md  shared.md
